# docs/swagger.json
@@ -88,6 +88,48 @@
                 }
             }
         },
+        "/api/v1/account/change-profile": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "ChangeProfile",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AccountChangeProfileReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/account/check-phone": {
             "post": {
                 "produces": [
@@ -138,7 +180,7 @@
                 "tags": [
                     "account"
                 ],
-                "summary": "GetProfile",
+                "summary": "GetAccountProfile",
                 "parameters": [
                     {
                         "type": "string",
@@ -153,6 +195,89 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/entity.Account"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/account/profile": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "GetProfile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Profile"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/account/profile/suggest": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "GetSuggestFriendProfiles",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.Profile"
+                            }
                         }
                     },
                     "400": {
@@ -192,7 +317,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Account"
+                            "$ref": "#/definitions/entity.Profile"
                         }
                     },
                     "400": {
@@ -232,7 +357,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entity.Account"
+                            "$ref": "#/definitions/entity.Profile"
                         }
                     },
                     "400": {
@@ -338,7 +463,7 @@
             }
         },
         "/api/v1/auth/logout": {
-            "get": {
+            "post": {
                 "produces": [
                     "application/json"
                 ],
@@ -358,6 +483,51 @@
                 "responses": {
                     "200": {
                         "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/auth/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "authentications"
+                ],
+                "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.AccountRegisterReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -541,9 +711,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "chat"
                 ],
-                "summary": "UpdateAvatarAsync",
+                "summary": "GetChatActivityFromNToM",
                 "parameters": [
                     {
                         "type": "string",
@@ -554,15 +724,22 @@
                     },
                     {
                         "type": "string",
-                        "description": "oldAvatar",
-                        "name": "oldAvatar",
+                        "description": "id",
+                        "name": "id",
                         "in": "query",
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "newAvatar",
-                        "name": "newAvatar",
+                        "type": "integer",
+                        "description": "x",
+                        "name": "x",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "y",
+                        "name": "y",
                         "in": "query",
                         "required": true
                     }
@@ -571,7 +748,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.HTTPResp"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/entity.ChatActivity"
+                            }
                         }
                     },
                     "400": {
@@ -764,6 +944,60 @@
                     }
                 }
             }
+        },
+        "/api/v1/user/update-avatar-account": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "UpdateAvatarAsync",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "oldAvatar",
+                        "name": "oldAvatar",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "newAvatar",
+                        "name": "newAvatar",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/dto.HTTPResp"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -794,6 +1028,20 @@
                 }
             }
         },
+        "dto.AccountChangeProfileReq": {
+            "type": "object",
+            "properties": {
+                "birthday": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "boolean"
+                },
+                "userName": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.AccountCheckPhoneNumberReq": {
             "type": "object",
             "properties": {
@@ -803,6 +1051,17 @@
             }
         },
         "dto.AccountLoginReq": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.AccountRegisterReq": {
             "type": "object",
             "properties": {
                 "password": {
@@ -923,9 +1182,6 @@
                         "type": "string"
                     }
                 },
-                "id": {
-                    "type": "string"
-                },
                 "messageID": {
                     "type": "string"
                 },
@@ -945,6 +1201,9 @@
                     "type": "string"
                 },
                 "userID": {
+                    "type": "string"
+                },
+                "userName": {
                     "type": "string"
                 }
             }
@@ -972,7 +1231,7 @@
                 "chatAvatar": {
                     "type": "string"
                 },
-                "chatId": {
+                "chatID": {
                     "type": "string"
                 },
                 "chatName": {
@@ -986,9 +1245,6 @@
                     "items": {
                         "$ref": "#/definitions/entity.Delivery"
                     }
-                },
-                "id": {
-                    "type": "string"
                 },
                 "id_UserOrGroup": {
                     "type": "string"
@@ -1017,9 +1273,6 @@
             "type": "object",
             "properties": {
                 "createdAt": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "messageID": {
