# http/auth_http.go
@@ -11,6 +11,32 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// Register godoc
+//
+//	@Summary	Register
+//	@Description
+//	@Tags		authentications
+//	@Accept		json
+//	@Produce	json
+//	@Param		request	body		dto.AccountRegisterReq	true	"request"
+//	@Success	200		{object}	dto.HTTPResp
+//	@Failure	400		{object}	dto.HTTPResp
+//	@Failure	500		{object}	dto.HTTPResp
+//	@Router		/api/v1/auth/register [post]
+func (s *Server) Register(ctx *gin.Context) {
+	req, err := dto.AccountRegisterReq{}.Bind(ctx)
+	if err != nil {
+		abortWithStatusError(ctx, 400, err)
+		return
+	}
+	_, err = s.AuthSvc.Register(ctxFromGin(ctx), req)
+	if err != nil {
+		abortWithStatusError(ctx, 400, err)
+		return
+	}
+	ctx.AbortWithStatusJSON(200, gin.H{"status": "OK"})
+}
+
 // Login godoc
 //
 //	@Summary	Login
@@ -54,7 +80,7 @@ func (s *Server) Login(ctx *gin.Context) {
 //	@Success	200
 //	@Failure	400	{object}	dto.HTTPResp
 //	@Failure	500	{object}	dto.HTTPResp
-//	@Router		/api/v1/auth/logout [get]
+//	@Router		/api/v1/auth/logout [post]
 func (s *Server) Logout(ctx *gin.Context) {
 	bearerToken, ok := utils.GetBearerAuth(ctx)
 	if !ok {
